# FastMatrix

./: CMakeLists.txt  README.md
scripts/: plot_results.py
src/: benchmark.cpp  fastmatrix.h  mat_ops.cu  mat_ops_cpu.cpp
